--- a/css/reset.css
+++ b/css/reset.css
@@ -1,5 +1,8 @@
+* {
+  box-sizing: border-box;
+}
+
 html {
-  overflow-y: hidden;
   scroll-behavior: smooth;
   -webkit-tap-highlight-color: transparent;
 }
