--- a/css/hero.css
+++ b/css/hero.css
@@ -27,6 +27,12 @@
   gap: 10px;
 }
 
+.hero-btns div {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
 .scroll {
   margin-top: 22px;
   display: flex;
@@ -42,4 +48,30 @@
   background-color: #fff;
   stroke: var(--main-color);
   fill: var(--main-color);
+}
+
+@media screen and (min-width: 768px) {
+  .hero-wrapper {
+    padding: 671px 40px 40px;
+    background-image: url(../img/hero/hero-tablet.webp);
+    border-radius: 30px;
+  }
+
+  .hero-title {
+    font-size: 28px;
+    max-width: 484px;
+  }
+
+  .hero-btns {
+    align-items: center;
+  }
+
+  .scroll {
+    margin-top: 0;
+  }
+
+  .scroll-svg {
+    width: 38px;
+    height: 38px;
+  }
 }
