--- a/css/base.css
+++ b/css/base.css
@@ -22,6 +22,19 @@ body {
   margin: 0 auto 32px;
   max-width: 282px;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 
 @media screen and (min-width: 768px) {
   .container {
