--- a/css/base.css
+++ b/css/base.css
@@ -2,6 +2,7 @@ body {
   font-family: "Montserrat", sans-serif;
   font-style: normal;
   line-height: 1.2;
+  background-color: #fafafa;
 }
 
 .container {
