--- a/css/hero.css
+++ b/css/hero.css
@@ -51,6 +51,9 @@
 }
 
 @media screen and (min-width: 768px) {
+  .hero {
+    padding-top: 80px;
+  }
   .hero-wrapper {
     padding: 671px 40px 40px;
     background-image: url(../img/hero/hero-tablet.webp);
