--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 @import url(base.css);
 @import url(variables.css);
 @import url(buttons.css);
+@import url(header.css);
 @import url(hero.css);
 @import url(about.css);
 @import url(taste.css);
